# advent-lang

./: Cargo.toml  README.md
sample/: fizzbuzz.advent  hello.advent
src/: ast.rs  lexer.rs  lib.rs  main.rs  pipeline.rs
src/analysis/: errors.rs  mod.rs  program_data.rs  types.rs
src/analysis/inference/: mod.rs  test.rs  typing.rs
src/analysis/types/: mod.rs
src/parser/: expr_test.rs  mod.rs  statement_test.rs
src/runner/: core.rs  errors.rs  mod.rs  obj.rs
src/std_lib/: mod.rs
tests/: integration_test.rs
